--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Úkol č. 14 | Dad jokes</title>
+    <title>Úkol č. 14 + 15 | Dad jokes</title>
   </head>
   <body>
     <div id="app"></div>
